Added slides with some info on my recent work with STARS-H; more code on n-dimensional arrays

--- a/slides/draft_slides.tex
+++ b/slides/draft_slides.tex
@@ -6,9 +6,9 @@
 \usetikzlibrary{arrows.meta}
 
 \title[STARS-$\mathcal{H}$]{\underline{S}oftware for \underline{T}esting
-\underline{A}ccuracy, \underline{R}eliability and \underline{S}peedup of
+\underline{A}ccuracy, \underline{R}eliability and \underline{S}calability of
 $\mathcal{H}$ierarchical computations (STARS-$\mathcal{H}$).}
-\author{A.Mikhalev, H.Ltaief}
+%\author{A.Mikhalev, H.Ltaief}
 \institute{King Abdullah University of Science and Technology}
 \date{\today}
 
